2004-08-23  Jari Petter Sundell  <jaris@student.matnat.uio.no>

	* torrent/data: Wrote new and cleaner files to chunk abstraction. Much prettier.

2004-08-14    <jaris@ifi.uio.no>

	* torrent/tracker: New tracker request code. Modular using sigc++
	and ready for extension.

	* torrent: Moved over to using libcurl for http downloads.

2004-08-07    <jaris@ifi.uio.no>

	* configure: Added sigc++-2.0 to dependencies.

	* torrent/url: Shiny new http interface with sigc++ signals.

2004-08-05    <jaris@ifi.uio.no>

	* client: Added support for http urls.

	* delegator: Fixed a bug that caused us to request pieces the peer
	didn't have. (DOH!)

2004-08-04    <jaris@ifi.uio.no>

	* bitfield: Clean up bitfield class and opimized .notIn().

	* torrent: Finished http class, testing remains.

2004-08-03      <jaris@ifi.uio.no>

	* torrent: Don't throw on zero length piece messages. Why do they
	send these?

2004-07-28    <jaris@ifi.uio.no>

	* torrent: Fixed a few bugs in the throttle and added min chunk
	size.

2004-07-25    <jaris@ifi.uio.no>

	* torrent: Fixed bug that made it skip sending the stop message to
	the tracker when quiting.

	* torrent: Changed stdint.h to inttypes.h and made it easy to
	disable execinfo.h in client.

	* torrent: Added throttle with tree structure. Bandwidth
	delegation needs work.

2004-07-20    <jaris@ifi.uio.no>

	* torrent: Using deque instead of list to increase performance.

	* torrent: Don't close the connection if errno == EINTR.

	* client: Added view of the exceptions log.

2004-07-11    <jaris@ifi.uio.no>

	* torrent: Choosing new chunks to download according to how many
	we see.

2004-07-10    <jaris@ifi.uio.no>

	* torrent: BitField::allSet() now works right, fixes problems with
	finished peers not being disconnected.

	* client: No longer breaks when it receives resize interrupts
	during select.

2004-07-08    <jaris@ifi.uio.no>

	* torrent: Fixed mangling of outgoing commands.

2004-07-07    <jaris@ifi.uio.no>
